--- a/vignettes/dNdS.Rmd
+++ b/vignettes/dNdS.Rmd
@@ -51,6 +51,20 @@ The purpose of this vignette is to explore the various relationships of dN/dS - 
 coding sequence substitution rate - to synteny. The input to this vignette is similar
 to what is produced in the `vignette("OrthogroupSyntenies", package = "OikScrambling")`.
 
+```{r flagging_orthogroups}
+clades=list("Oki_Kum"=c("Kum", "Oki"), "Osa_Aom"=c("Osa","Aom"), "Bar_Nor"=c("Bar","Nor"), "Northern"=c("Bar","Nor","Osa","Aom"))
+
+species_name_map = data.frame(old_names=c("AOM-5-5f.prot.longest.fa_1", "Bar2_p4.Flye.prot.longest.fa_1", "KUM-M3-7f.prot.longest.fa_1", "OKI2018_I69.v2.prot.longest.fa_1", "OSKA2016v1.9.prot.longest.fa_1", "OdB3.v1.0.prot.fa_1.nohaplo"),
+                              new_names=c("Aom", "Bar", "Kum", "Oki", "Osa", "Nor")
+                              )
+
+b = do.call(rbind, flagOrthofinderGenes(system.file("extdata/OrthoFinder/N19.tsv", package = "BreakpointsData"), clades=clades, species_name_map=species_name_map))
+
+# ggplot(b) + aes(x=reorder(flag, flag, function(x) length(x))) + geom_bar(stat="count", position="dodge") + facet_wrap(~ present_in_all_species, scales = 'free' ) + xlab(NULL) + coord_flip()
+
+```
+
+
 The two important objects are `orthoPairs` and `orthoBreaks`, containing the orthologue-
 based `GBreaks` objects and coalesced `GBreaks` objects, respectively.
 
