--- a/vignettes/PWM.Rmd
+++ b/vignettes/PWM.Rmd
@@ -28,42 +28,22 @@ needs to be executed by hand when needed.
 Core packages that provide functions we use a lot.
 
 ```{r loadlib, echo=T, results='hide'}
-suppressPackageStartupMessages({
-  library('GenomicBreaks')
-  library('BSgenome')
-  library('GenomicFeatures')
-  library('ggplot2')
-})
+library('OikScrambling')   |> suppressPackageStartupMessages()
+
+(genomes <- OikScrambling:::loadAllGenomes())
+(transcripts <- OikScrambling:::loadAllTranscriptsGR() |> suppressWarnings())
+(load("BreakPoints.Rdata"))
+
+library('ggplot2')
+
 requireNamespace("ggseqlogo")
 requireNamespace("JASPAR2020")
 requireNamespace("rGADEM")
 ```
 
-### BSgenome packages
-
-Example command to install one _Oikopleura_ BSgenome package if you do not yet
-have it:
-
-```
-install.packages("BSgenome.Odioica.local.OKI2018.I69", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-```
-
-```{r load_BSgenome_packages}
-# These will need to be installed by the user
-library("BSgenome.Odioica.local.OKI2018.I69")
-library("BSgenome.Odioica.local.OSKA2016v1.9")
-library("BSgenome.Odioica.local.Bar2.p4")
-library("BSgenome.Odioica.local.KUM.M3")
-library("BSgenome.Odioica.local.AOM.5")
-library("BSgenome.Odioica.local.Odioica.reference.v3.0")
-
-genomes <- SimpleList(
-  # Chromosome assemblies
-  Oki = OKI2018_I69, Osa = OSKA2016v1.9, Bar = Bar2_p4,
-  # Less contiguous assemblies
-  Kum = KUM_M3, Aom = AOM_5, Nor = OdB3)
-
 ## Genome lengths
+
+```{r genome_properties}
 (genome.lengths <- sapply(genomes, \(g) sum(seqlengths(seqinfo(g)))))
 
 ## Genome average AT content
@@ -71,73 +51,16 @@ genomes <- SimpleList(
   weighted.mean(letterFrequency(getSeq(g), "AT", as.prob = TRUE), seqlengths(g))))
 ```
 
-## Annotations
-
-The annotations from `/bucket/LuscombeU/common/Breakpoints/Annotations` are
-distributed in the same drat repository as the alignment data.
-
-```
-install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-```
-
-```{r load_annotations, warning=FALSE}
-annots <- SimpleList()
-
-gff2txdb <- function(file, genome) {
-  file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
-  tx <- rtracklayer::import.gff(file)
-  tx <- tx[seqnames(tx) %in% seqnames(genome)]
-  tx <- GRanges(tx, seqinfo = seqinfo(genome))
-  tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-}
-
-gff2txdb_Norway <- function(file, genome) {
-  file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
-  tx <- rtracklayer::import.gff(file)
-  tx <- tx[!is.na(tx$mRNA)]
-  # Remove "scaffoldA" objects in the OdB3 annotation
-  tx <- tx[seqnames(tx) %in% seqnames(genome)]
-  tx$ID <- tx$mRNA
-  tx <- GRanges(tx, seqinfo = seqinfo(genome))
-  tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-}
-
-annots$Oki <- gff2txdb("OKI2018_I69.v2/OKI2018_I69.v2.gm.gff.gz",  OKI2018_I69)
-annots$Osa <- gff2txdb("OSKA2016v1.9/OSKA2016v1.9.gm.gff.gz",      OSKA2016v1.9)
-annots$Bar <- gff2txdb("Bar2_p4.Flye/Bar2_p4.Flye.gm.gff.gz",      Bar2_p4)
-annots$Kum <- gff2txdb("KUM-M3-7f/KUM-M3-7f.gm.gff.gz",            KUM_M3)
-annots$Aom <- gff2txdb("AOM-5-5f/AOM-5-5f.gm.gff.gz",              AOM_5)
-annots$Nor <- gff2txdb_Norway("OdB3/Oikopleura_annot_v1.0.gff.gz", OdB3)
-```
-
-## Breakpoints
-
-See the `LoadGenomicBreaks` vignette on how to genereate the Rdata file.
-
-```{r load_data}
-load("BreakPoints.Rdata")
-```
-
 ## Inversions
 
 I wanted to search search for motifs near inversions to see if they can
 lead to an explanation.
 
-### Number of inversions
-
-More inversions are found after coalescing colinear blocks because of situations
-where `+ - +` was `+ - - +` before collapsing. 
-
-```{r detect_trivial_invertions}
-sapply(gbs, function(gb) sum(flagInversions(gb)$inv))
-sapply(coa, function(gb) sum(flagInversions(gb)$inv))
-sapply(coa2, function(gb) sum(flagInversions(gb)$inv))
-```
+See `vignette("Inversions", package = "OikScrambling")` for details on inversion.
 
 ### Isolate the left-side gaps in inversions
 
 ```{r search_for_inversions}
-# Using coa and not gbs for reason on better detection explained above.
 inv.lgaps <- sapply(coa, leftInversionGaps) |> SimpleList()
 
 data.frame(width=width(inv.lgaps$Oki_Osa)) |>
@@ -151,14 +74,14 @@ getGRseqs <- function (gr) {
   seqs
 }
 
-inv.lgaps.Seq <- sapply(inv.lgaps, getGRseqs) |> SimpleList()
+inv.lgaps.Seq <- sapply(inv.lgaps[1:15], getGRseqs) |> SimpleList()
 ```
 
 ### AT richness
 
 ```{r at_richness}
 ## Inverted regions are AT-rich as usual.
-invRegions <- sapply(coa, \(gr) filterInversions(flagInversions(gr))) |> SimpleList()
+invRegions <- sapply(coa[1:15], \(gr) filterInversions(flagInversions(gr))) |> SimpleList()
 invSeq <-  sapply(invRegions, getGRseqs) |> SimpleList()
 
 sapply(invSeq, \(seq) letterFrequency(seq, "AT", as.prob = TRUE) |> summary())
